--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+  <meta name="google-site-verification" content="1Nq2OR8MVVeu1TDt7dLd2Q__hCcA5CO93qI8yn0JRu8" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LocalizeAI - Asisten AI untuk UMKM</title>
