--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta name="google-site-verification" content="1Nq2OR8MVVeu1TDt7dLd2Q__hCcA5CO93qI8yn0JRu8" />
 <!DOCTYPE html>
 <html lang="id">
 <head>
