--- a/index.html
+++ b/index.html
@@ -117,15 +117,16 @@
   </section>
 
   <!-- TESTIMONI -->
-  <section class="px-6 py-20 bg-blue-600 text-white">
-    <div class="max-w-4xl mx-auto text-center">
-      <h3 class="text-3xl font-bold mb-8" data-aos="fade-up">Apa Kata Mereka?</h3>
-      <blockquote class="text-xl italic mb-4" data-aos="fade-right">
-        "Kalau ini beneran jalan, UMKM kita bakal makin naik kelas!"
-      </blockquote>
-      <p data-aos="fade-left">- Beta Tester Pertama</p>
-    </div>
-  </section>
+ <section class="px-6 py-20 bg-blue-600 text-white">
+  <div class="max-w-4xl mx-auto text-center">
+    <h3 class="text-3xl font-bold mb-8" data-aos="fade-up">Klien Kami</h3>
+    <a href="https://www.websiteclientanda.com" target="_blank" 
+       class="inline-block bg-white text-blue-600 font-semibold px-8 py-4 rounded-lg shadow hover:bg-gray-100 transition" 
+       data-aos="zoom-in">
+      Lihat Website Klien Kami
+    </a>
+  </div>
+</section>
 
   <!-- FORM -->
   <section id="daftar" class="px-6 py-20 max-w-4xl mx-auto text-center">
