--- a/index.html
+++ b/index.html
@@ -117,17 +117,26 @@
   </section>
 
   <!-- TESTIMONI -->
- <section class="px-6 py-20 bg-blue-600 text-white">
+<section class="px-6 py-20 bg-blue-600 text-white">
   <div class="max-w-4xl mx-auto text-center">
-    <h3 class="text-3xl font-bold mb-8" data-aos="fade-up">Klien Kami</h3>
-    <a href="https://www.websiteclientanda.com" target="_blank" 
-       class="inline-block bg-white text-blue-600 font-semibold px-8 py-4 rounded-lg shadow hover:bg-gray-100 transition" 
-       data-aos="zoom-in">
-      Lihat Website Klien Kami
-    </a>
+    <h3 class="text-3xl font-bold mb-8" data-aos="fade-up">Portofolio Klien Kami</h3>
+    <div class="flex flex-col sm:flex-row justify-center gap-4">
+      
+      <a href="https://bakmimimucarinasayang.netlify.app/" target="_blank" 
+         class="inline-block bg-white text-blue-600 font-semibold px-8 py-4 rounded-lg shadow hover:bg-gray-100 transition" 
+         data-aos="zoom-in" data-aos-delay="100">
+        Lihat Website Klien 1
+      </a>
+      
+      <a href="https://baksosapinadneu.netlify.app/" target="_blank" 
+         class="inline-block bg-white text-blue-600 font-semibold px-8 py-4 rounded-lg shadow hover:bg-gray-100 transition" 
+         data-aos="zoom-in" data-aos-delay="200">
+        Lihat Website Klien 2
+      </a>
+
+    </div>
   </div>
 </section>
-
   <!-- FORM -->
   <section id="daftar" class="px-6 py-20 max-w-4xl mx-auto text-center">
     <h3 class="text-3xl font-bold mb-6" data-aos="fade-up">Jangan Ketinggalan 🚀</h3>
