--- a/indexi.html
+++ b/indexi.html
@@ -117,14 +117,25 @@
 
   <!-- TESTIMONI -->
   <section class="px-6 py-20 bg-blue-600 text-white">
-    <div class="max-w-4xl mx-auto text-center">
-      <h3 class="text-3xl font-bold mb-8" data-aos="fade-up">Apa Kata Mereka?</h3>
-      <blockquote class="text-xl italic mb-4" data-aos="fade-right">
-        "Kalau ini beneran jalan, UMKM kita bakal makin naik kelas!"
-      </blockquote>
-      <p data-aos="fade-left">- Beta Tester Pertama</p>
+  <div class="max-w-4xl mx-auto text-center">
+    <h3 class="text-3xl font-bold mb-8" data-aos="fade-up">Portofolio Klien Kami</h3>
+    <div class="flex flex-col sm:flex-row justify-center gap-4">
+      
+      <a href="https://bakmimimucarinasayang.netlify.app/" target="_blank" 
+         class="inline-block bg-white text-blue-600 font-semibold px-8 py-4 rounded-lg shadow hover:bg-gray-100 transition" 
+         data-aos="zoom-in" data-aos-delay="100">
+        Lihat Website Klien 1
+      </a>
+      
+      <a href="https://baksosapinadneu.netlify.app/" target="_blank" 
+         class="inline-block bg-white text-blue-600 font-semibold px-8 py-4 rounded-lg shadow hover:bg-gray-100 transition" 
+         data-aos="zoom-in" data-aos-delay="200">
+        Lihat Website Klien 2
+      </a>
+
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- FORM -->
   <section id="daftar" class="px-6 py-20 max-w-4xl mx-auto text-center">
@@ -169,4 +180,5 @@
     });
   </script>
 </body>
+
 </html>
