--- a/index.html
+++ b/index.html
@@ -120,18 +120,22 @@
 <section class="px-6 py-20 bg-blue-600 text-white">
   <div class="max-w-4xl mx-auto text-center">
     <h3 class="text-3xl font-bold mb-8" data-aos="fade-up">Portofolio Klien Kami</h3>
-    <div class="flex flex-col sm:flex-row justify-center gap-4">
+    <div class="flex flex-col sm:flex-row justify-center gap-6">
       
-      <a href="https://bakmimimucarinasayang.netlify.app/" target="_blank" 
-         class="inline-block bg-white text-blue-600 font-semibold px-8 py-4 rounded-lg shadow hover:bg-gray-100 transition" 
+      <a href="https://bakmimucarinasayang.netlify.app/" target="_blank" 
+         class="flex flex-col items-center p-6 bg-white shadow rounded-xl w-64 transform transition-transform hover:scale-105" 
          data-aos="zoom-in" data-aos-delay="100">
-        Lihat Website Klien 1
+        <img src="bakmi.jpg" alt="Logo Bakmi Mimu" class="w-24 h-24 mb-4 rounded-full object-cover">
+        <span class="text-blue-600 font-bold text-lg text-center">Bakmi Mimu Carina Sayang</span>
+        <span class="text-gray-500 text-sm mt-1">Lihat Website</span>
       </a>
       
       <a href="https://baksosapinadneu.netlify.app/" target="_blank" 
-         class="inline-block bg-white text-blue-600 font-semibold px-8 py-4 rounded-lg shadow hover:bg-gray-100 transition" 
+         class="flex flex-col items-center p-6 bg-white shadow rounded-xl w-64 transform transition-transform hover:scale-105" 
          data-aos="zoom-in" data-aos-delay="200">
-        Lihat Website Klien 2
+        <img src="bakso.jpg" alt="Logo Bakso NadNeu" class="w-24 h-24 mb-4 rounded-full object-cover">
+        <span class="text-blue-600 font-bold text-lg text-center">Bakso NadNeu</span>
+        <span class="text-gray-500 text-sm mt-1">Lihat Website</span>
       </a>
 
     </div>
