--- a/indexi.html
+++ b/indexi.html
@@ -121,7 +121,7 @@
     <h3 class="text-3xl font-bold mb-8" data-aos="fade-up">Portofolio Klien Kami</h3>
     <div class="flex flex-col sm:flex-row justify-center gap-6">
       
-      <a href="https://bakmimucarinasayang.netlify.app/" target="_blank" 
+      <a href="https://bakmimimucarinasayang.netlify.app/" target="_blank" 
          class="flex flex-col items-center p-6 bg-white shadow rounded-xl w-64 transform transition-transform hover:scale-105" 
          data-aos="zoom-in" data-aos-delay="100">
         <img src="bakmi.jpg" alt="Logo Bakmi Mimu" class="w-24 h-24 mb-4 rounded-full object-cover">
@@ -186,4 +186,5 @@
 </body>
 
 </html>
+
 
